examples/demo/tests/requests/snapshots/can_login.snap
---
source: tests/requests/main.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"framework\"}",
)
