examples/demo/tests/requests/snapshots/can_reset_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(reset_response.status_code(), reset_response.text())"
---
(
    200,
    "{}",
)
