examples/demo/tests/requests/snapshots/get_notes_with_page_size@notes_request.snap
---
source: tests/requests/notes.rs
assertion_line: 41
expression: "(notes.status_code(), notes.text())"
---
(
    200,
    "{\"results\":[{\"id\":ID,\"title\":null,\"content\":\"content 1\"}],\"pagination\":{\"page\":1,\"page_size\":1,\"total_pages\":11,\"total_items\":11}}",
)
